--- a/aesthetic-master/index.html
+++ b/aesthetic-master/index.html
@@ -387,6 +387,60 @@
     </div>
     <!-- Gallery End -->
 
+    <!-- Latest News Begin -->
+    <section class="latest spad">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-md-8 col-sm-6">
+                    <div class="section-title">
+                        <span>Our News</span>
+                        <h2>Skin care tips</h2>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6">
+                    <div class="latest__btn">
+                        <a href="#" class="primary-btn">View all news</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="latest__item">
+                        <h5><a href="#">Here’s how you can get a natural glow this party season</a></h5>
+                        <p>Lorem ipsum, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                        <ul>
+                            <li><img src="img/blog/blog-author.jpg" alt=""> John Doe</li>
+                            <li>Dec 06, 2019</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="latest__item">
+                        <h5><a href="#">Get better skin with these top 10 tips for skin care</a></h5>
+                        <p>Lorem ipsum, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                        <ul>
+                            <li><img src="img/blog/blog-author.jpg" alt=""> John Doe</li>
+                            <li>Dec 06, 2019</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="latest__item">
+                        <h5><a href="#">8 Ways to Save Your Skin if You Exercise Outside This Winter</a></h5>
+                        <p>Lorem ipsum, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                        <ul>
+                            <li><img src="img/blog/blog-author.jpg" alt=""> John Doe</li>
+                            <li>Dec 06, 2019</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Latest News End -->
+
+    
+
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
